<resources>
    <string name="app_name">MobileAcademiaLatam</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="valor_accion">Tigre</string>
    <string name="valor_accion_jirafa">Jirafa</string>
    <string name="valor_accion_panda">Jirafa</string>
    <string name="title_activity_mostrar_informacion">mostrarInformacion</string>
    <string name="text_ingreso">Nombre</string>
    <string name="texto_tigre">Tigre</string>
    <string name="valor_accion_oso">Oso</string>
    <string name="valor_accion_elefante">Elefante</string>
    <string name="descripcionTigre">descripcion tigre</string>
    <string name="descripcionJirafa">jirafa</string>
    <string name="descripcionPanda">Oso</string>
    <string name="descripcionElefante">Elefante</string>
</resources>
